[package]
name = "proxyctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml  = "0.8"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "socks"] }
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

