[package]
name = "proxyctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml  = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "socks"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[profile.release]
opt-level = "z"         # 体积优先（"s" 也可）
lto = true              # 开启 LTO（true=胖LTO，thin更快但可能略大）
codegen-units = 1       # 更好的整体优化
panic = "abort"         # 移除 unwind 代码
strip = true            # 1.70+ 可用，等价于自动 strip

